# FOTON

./: .gitignore  Estrutura de pastas e arquivos.bat  README.md  requirements.txt
agente_qa/: .env.example  .gitignore  CHANGELOG.md  CHECKLIST.md  ESTRUTURA.md  INSTALACAO_MANUAL.md  PROBLEMAS_E_SOLUCOES.md  README.md  README_WEB.md  instalar.bat  main.py  pyproject.toml  pytest.ini  requirements.txt  start_web_backend.bat  temp_agent_run.py  test_agent_direct.py  test_playwright_visual.py  test_request.json  ui_agente.py
agente_qa/agent/: browser.py  browser_actions.py  constants.py  exceptions.py  form_handler.py  json_parser.py  legacy_utils.py  llm_providers.py  prompt_generator.py
agente_qa/backend/: api.py  api_simple.py  requirements.txt  runner.py  start_backend.bat
agente_qa/config/: __init__.py  settings.py
agente_qa/docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  SECURITY.md
agente_qa/frontend/: electron-new.js  electron-simple.js  electron.js  fix_log_structure.py  index.html  package-lock.json  package.json  preload.js  start-electron.bat  start_frontend.bat  test-electron.js  vite.config.js
agente_qa/frontend/src/: App.css  App.jsx  App.jsx.backup  App_temp.jsx  fix_layout.py
agente_qa/scripts/: README.md  cleanup.py  health_check.py  start_servers.ps1  start_servers.py
agente_qa/tests/: README.md  __init__.py  conftest.py
app/: config.py  main.py
app/agent/: browser.py  html_extractor.py  parser.py
llm_agent_test/: .gitignore  config.py  main.py  main_refatorado.py  teste_integracao.py  teste_refatoracao.py  ui_agente.py
llm_agent_test/agent/: __init__.py  browser.py  browser_actions.py  config.py  diagnostico.py  html_parser.py  interacao.py  io.py  json_parser.py  llm.py  logger_utils.py  navigation_controller.py  prompt_generator.py  testid_injector.py  utils.py  validation.py
llm_agent_test/logs/: seletores_passo_1.txt
llm_agent_test/logs/model_responses/: passo0_google-gemma-3n-e4b_20250817_024121.json  passo0_google-gemma-3n-e4b_20250817_024444.json  passo10_google-gemma-3n-e4b_20250817_024302.json  passo10_google-gemma-3n-e4b_20250817_024625.json  passo11_google-gemma-3n-e4b_20250817_024312.json  passo11_google-gemma-3n-e4b_20250817_024636.json  (+18 more)
logs/: seletores_passo_1.txt  seletores_passo_2.txt  seletores_passo_3.txt  seletores_passo_4.txt  seletores_passo_5.txt
(+26 files in other folders)
